--- a/theme/basic/css/scss/default.scss
+++ b/theme/basic/css/scss/default.scss
@@ -17,7 +17,7 @@ $mf-color: #6664ff;
 .main3 {
     background:url('../../img/dashboard/human_bg.png'), url('../../img/dashboard/main_bg3.jpg');
     background-size:auto, 100% 100%; 
-    background-position:90% center,0 0;
+    background-position:80% center,0 0;
     background-repeat:no-repeat;
 
     .box1 {
@@ -82,9 +82,9 @@ $mf-color: #6664ff;
 .main5 {
 
     .main5_bg {
-        background:url('../../img/dashboard/s.png') no-repeat 50% 90%;
-        width: 141px;
-        height: 178px;
+        background:url('../../img/dashboard/text_set.png') no-repeat 0% 0%;
+        width: 150px;
+        height: 185px;
         position: absolute;
         top: 70%;
         left: 45%;
@@ -174,7 +174,7 @@ $mf-color: #6664ff;
     color: #fff;
 
     .title {
-        font-size: 40px;
+        font-size: 56px;
         font-weight: bold;
         display: block;
         font-family: GmarketSans;
@@ -194,8 +194,8 @@ $mf-color: #6664ff;
     }
 
     .sub_title {
-        font-size: 16px;
-        line-height: 28px;
+        font-size: 22px;
+        line-height: 36px;
         font-weight: 100;
     }
 }
@@ -213,9 +213,10 @@ $mf-color: #6664ff;
         height: 500px;
 
         .title {
-            font-size: 36px;
+            font-size: 38px;
             font-weight: bold;
             font-family: GmarketSans;
+            line-height: 50px;
         }
     }
 
@@ -227,7 +228,7 @@ $mf-color: #6664ff;
         justify-content: space-between;
 
         .sub_title {
-            font-size: 16px;
+            font-size: 18px;
             line-height: 30px;
             font-weight: 100;
 
@@ -246,7 +247,7 @@ $mf-color: #6664ff;
             flex-flow: column nowrap;
             justify-content: flex-end;
             height: 100px;
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
         }
 
@@ -332,9 +333,9 @@ $mf-color: #6664ff;
 
             p {
                 text-align: center;
-                font-size: 16px;
+                font-size: 18px;
                 height: 80px;
-                line-height: 80px;
+                line-height: 100px;
                 font-weight: 100;
             }
         }
@@ -358,7 +359,7 @@ $mf-color: #6664ff;
         height: 180px;
 
         p {
-            font-size: 32px;
+            font-size: 40px;
             font-weight: 500;
 
             &:first-child {
@@ -373,8 +374,12 @@ $mf-color: #6664ff;
                 font-family: GmarketSans;
             }
 
+            &:nth-child(3) {
+                font-size: 32px;
+            }
+
             span {
-                font-size: 12px;
+                font-size: 15px;
                 color: $mf-color;
                 letter-spacing: 0;
                 margin: 0 5px;
@@ -389,8 +394,10 @@ $mf-color: #6664ff;
             font-size: 16px;
             line-height: 28px;
             letter-spacing: -1px;
+            font-weight: 100;
 
             span {
+                font-weight: bold;
                 color: $mf-color;
             }
         }
@@ -431,13 +438,13 @@ $mf-color: #6664ff;
         left: 40%;
 
         p {
-            font-size: 28px;
+            font-size: 32px;
             font-weight: bold;
 
             &:last-child {
-                font-size: 16px; 
+                font-size: 18px; 
                 color: $mf-color;
-                font-weight: bold;
+                font-weight: 100;
                 font-family: apple;
             }
         }
@@ -445,7 +452,7 @@ $mf-color: #6664ff;
 
     .content_wrap {
         width: 100%;
-        height: 500px;
+        height: 540px;
 
         .sub_title {
             width: 90%;
@@ -459,10 +466,11 @@ $mf-color: #6664ff;
                 align-items: center;
                 width: 1570px;
                 margin: 0 0 0 auto;
+                line-height: 75px;
 
                 > p {
                     &:first-child {
-                        font-size: 38px;
+                        font-size: 68px;
                         font-weight: bold;
                         text-align: center;
                         font-family: GmarketSans;
@@ -470,7 +478,7 @@ $mf-color: #6664ff;
                         &::after {
                             content: "";
                             display: block;
-                            width: 40px;
+                            width: 50px;
                             height: 2px;
                             background: #000;
                         }
@@ -478,18 +486,20 @@ $mf-color: #6664ff;
                 }
 
                 .right_text_wrap {
-                    font-size: 16px;
+                    font-size: 28px;
                     font-weight: bold;
-                    margin: 0 10px;
+                    margin: 0 20px;
                     line-height: 17px;
 
                     p {
                         font-family: GmarketSans;
                         font-weight: bold;
+                        line-height: 16px;
 
                         &:last-child {
                             color: $mf-color;
-                            font-size: 12px;
+                            font-size: 18px;
+                            line-height: 35px;
                         }
                     }
                 }
@@ -498,20 +508,20 @@ $mf-color: #6664ff;
 
         .content {
             background: #f8f8f8;
-            width: 90%;
+            width: 85%;
             height: 100%;
             display: flex;
             flex-flow: nowrap;
             font-size: 16px;
             padding: 30px 0;
-            font-weight: bold;
             z-index: 0;
 
             .container_wr {
-                width: 1570px;
+                width: 1470px;
                 margin: 0 0 0 auto; 
                 display: flex;
                 justify-content: space-between;
+                z-index: -1;
             }
 
             .left_wrap {
@@ -519,6 +529,13 @@ $mf-color: #6664ff;
                 flex-flow: column nowrap;
                 height: 200px;
                 justify-content: space-around;
+                height: 250px;
+
+                > p {
+                    font-size: 20px;
+                    font-weight: bold;
+                    height: 110px;
+                }
 
                 .text_wrap {
                     width: 600px;
@@ -528,6 +545,8 @@ $mf-color: #6664ff;
                     .list_wrap {
                         line-height: 2em;
                         letter-spacing: -1px;
+                        font-size: 18px;
+                        font-size: 100;
 
                         p {
 
@@ -547,7 +566,7 @@ $mf-color: #6664ff;
             .right_wrap {
                 position: absolute;
                 top: -15%;
-                right: 0;
+                right: 4%;
 
                 .img_wrap {
                     width: 600px;
@@ -569,9 +588,9 @@ $mf-color: #6664ff;
                 .next_arrow {
                     background: #ffd308 url('../../img/dashboard/arrow.png') no-repeat center 70%;
                     width: 160px;
-                    height: 100px;
+                    height: 120px;
                     position: absolute;
-                    bottom: -12%;
+                    bottom: -16%;
                     right: -17%;
                     z-index: -1;
                     cursor: pointer;
@@ -604,14 +623,14 @@ $mf-color: #6664ff;
         height: 150px;
 
         p {
-            font-size: 28px;
+            font-size: 32px;
             font-weight: bold;
             font-family: GmarketSans;
 
             &:last-child {
-                font-size: 16px; 
+                font-size: 18px; 
+                font-weight: 100;
                 color: $mf-color;
-                font-weight: bold;
                 font-family: apple;
             }
         }
@@ -633,6 +652,7 @@ $mf-color: #6664ff;
             }
 
             .explain_wrap {
+                width: 494px;
 
                 a {
 
@@ -642,9 +662,9 @@ $mf-color: #6664ff;
                     }
 
                     p {
-                        font-size: 16px;
+                        font-size: 20px;
                         border-bottom: 1px solid #eaeaea;
-                        padding: 10px 0;
+                        padding: 18px 0;
                         font-family: GmarketSans;
                         font-weight: 300;
 
@@ -664,7 +684,8 @@ $mf-color: #6664ff;
 
                         span {
                             color: #c1c5ce;
-                            font-size: 14px;
+                            font-size: 18px;
+                            font-weight: 100;
                             margin: 0 0 0 10px;
                             font-family: apple;
                         }
@@ -690,11 +711,11 @@ $mf-color: #6664ff;
                     height: 120px;
 
                     p {
-                        font-size: 20px;
+                        font-size: 24px;
                         font-weight: bold;
             
                         &:last-child {
-                            font-size: 16px; 
+                            font-size: 18px; 
                             color: $mf-color;
                             font-weight: bold;
                             letter-spacing: 0;
@@ -721,8 +742,8 @@ $mf-color: #6664ff;
                         letter-spacing: -1px;
 
                         p {
-                            font-weight: bold;
-                            font-size: 16px;
+                            font-weight: 100;
+                            font-size: 18px;
 
                             &::before {
                                 content:"";
@@ -739,10 +760,10 @@ $mf-color: #6664ff;
 
             .box_wrap {
                 background: $mf-color;
-                width: 100%;
-                height: 290px;
+                width: 120%;
+                height: 380px;
                 position: absolute;
-                top: 50%;
+                top: 30%;
                 left: 30%;
                 z-index: -1;
             }
@@ -751,26 +772,14 @@ $mf-color: #6664ff;
         .plan2 {
 
             .box_wrap {
-                background: #3e3e77;
-                width: 100%;
-                height: 290px;
-                position: absolute;
-                top: 50%;
-                left: 30%;
-                z-index: -1;
+                background: #009df7;
             }
         }
 
         .plan3 {
 
             .box_wrap {
-                background: #f85858;
-                width: 100%;
-                height: 290px;
-                position: absolute;
-                top: 50%;
-                left: 30%;
-                z-index: -1;
+                background: #ffd308;
             }
         }
 
@@ -797,13 +806,13 @@ $mf-color: #6664ff;
         justify-content: space-between;
 
         .title {
-            font-size: 28px;
+            font-size: 32px;
             font-weight: bold;
             letter-spacing: -1px;
             line-height: 28px;
     
             span {
-                font-size: 16px;
+                font-size: 18px;
                 font-weight: 100;
                 letter-spacing: 0;
             }
@@ -862,13 +871,13 @@ $mf-color: #6664ff;
                 p {
                     font-weight: bold;
                     text-align: center;
-                    font-size: 16px;
+                    font-size: 20px;
                 }
 
                 .text_wrap {
                     margin: 15px 0 0 0;
-                    line-height: 22px;
-                    font-size: 14px;
+                    line-height: 28px;
+                    font-size: 18px;
                 }
             }
         }
@@ -886,7 +895,7 @@ $mf-color: #6664ff;
 
     .title {
         font-weight: bold;
-        font-size: 28px;
+        font-size: 32px;
         letter-spacing: -1px;
         height: 150px;
         font-family: GmarketSans;
@@ -1055,7 +1064,7 @@ $mf-color: #6664ff;
 
     .left_wrap {
         font-weight: bold;
-        font-size: 28px;
+        font-size: 32px;
         text-align: center;
         display: flex;
         flex-flow: column nowrap;
@@ -1076,7 +1085,7 @@ $mf-color: #6664ff;
     }
 
     .right_wrap {
-        width: 600px;
+        width: 700px;
         height: 500px;
 
         form {
@@ -1088,6 +1097,7 @@ $mf-color: #6664ff;
             input {
                 border: 1px solid #c9c9cc;
                 background: none;
+                width: 90%;
                 height: 60px;
                 color: #fff;
             }
@@ -1128,6 +1138,7 @@ $mf-color: #6664ff;
             textarea {
                 background: none;
                 color: #fff;
+                width: 90%;
                 height: 150px;
             }
 
@@ -1148,3 +1159,5 @@ $mf-color: #6664ff;
         img {width: 150px}
     }
 }
+
+
