--- a/theme/basic/css/scss/default.css
+++ b/theme/basic/css/scss/default.css
@@ -310,15 +310,6 @@
   border: 0;
 }
 
-.main5 .main5_bg {
-  background: url("../../img/dashboard/text_set.png") no-repeat 0% 0%;
-  width: 150px;
-  height: 185px;
-  position: absolute;
-  top: 70%;
-  left: 45%;
-}
-
 .main6 {
   background: url("../../img/dashboard/main_bg6.jpg") no-repeat;
   background-size: cover;
@@ -1125,6 +1116,42 @@
           animation: fadein 2s;
 }
 
+.main5_wrap .text_bg_s_wrap {
+  background: url("../../img/dashboard/text_set.png") no-repeat 0 0;
+  width: 150px;
+  height: 185px;
+  position: absolute;
+  top: 70%;
+  left: 45%;
+  display: none;
+}
+
+.main5_wrap .text_bg_r_wrap {
+  background: url("../../img/dashboard/text_set.png") no-repeat 54% 0;
+  width: 150px;
+  height: 185px;
+  position: absolute;
+  top: 70%;
+  left: 45%;
+  display: none;
+}
+
+.main5_wrap .text_bg_l_wrap {
+  background: url("../../img/dashboard/text_set.png") no-repeat 106% 0;
+  width: 150px;
+  height: 185px;
+  position: absolute;
+  top: 70%;
+  left: 45%;
+  display: none;
+}
+
+.main5_wrap .plan_text_on {
+  display: block !important;
+  -webkit-animation: fadein 2s;
+          animation: fadein 2s;
+}
+
 .main6_wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1488,7 +1515,7 @@
   display: -ms-flexbox;
   display: flex;
   width: inherit;
-  height: inherit;
+  height: 850px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1514,7 +1541,7 @@
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
   width: 600px;
-  height: 250px;
+  height: 150px;
   font-family: GmarketSans;
 }
 
@@ -1605,4 +1632,19 @@
 
 #logo a img {
   width: 150px;
+}
+
+.ch_s {
+  -webkit-animation: fadein 2s;
+          animation: fadein 2s;
+}
+
+.ch_r {
+  -webkit-animation: fadein 2s;
+          animation: fadein 2s;
+}
+
+.ch_l {
+  -webkit-animation: fadein 2s;
+          animation: fadein 2s;
 }
