스크립 오류 및 scss수정

--- a/theme/basic/css/scss/default.css
+++ b/theme/basic/css/scss/default.css
@@ -422,7 +422,7 @@
 
 .main1_wrap .title {
   font-size: 56px;
-  font-weight: bold;
+  font-weight: 300;
   display: block;
   font-family: GmarketSans;
 }
