--- a/theme/basic/css/scss/default.scss
+++ b/theme/basic/css/scss/default.scss
@@ -163,7 +163,7 @@ $mf-color: #6664ff;
 
     .title {
         font-size: 56px;
-        font-weight: bold;
+        font-weight: 300;
         display: block;
         font-family: GmarketSans;
 
