--- a/theme/basic/css/scss/_variable.scss
+++ b/theme/basic/css/scss/_variable.scss
@@ -1,7 +1,8 @@
-$breakpoint-mobile: 335px;
+$breakpoint-mobile: 0px;
 $breakpoint-tablet: 758px;
 $breakpoint-desktop: 1024px;
 $breakpoint-desktop-wide: 1200px;
+$breakpoint-desktop-wide-wide: 1600px;
 
 
 
