--- a/theme/basic/css/default.css
+++ b/theme/basic/css/default.css
@@ -45,15 +45,15 @@ border:1px solid #558ab7 !important;
 .placeholdersjs {color:#aaa !important}
 
 /* 레이아웃 크기 지정 */
-#hd, #wrapper, #ft {min-width:1600px}
+/* #hd, #wrapper, #ft {min-width:1600px} */
 
-#hd_pop,
+/* #hd_pop,
 #hd_wrapper,
 #tnb .inner,
 
 #gnb .gnb_wrap,
 #container_wr,
-#ft_wr {width:1600px}
+#ft_wr {width:1600px} */
 
 /* 팝업레이어 */
 #hd_pop {z-index:1000;position:relative;margin:0 auto;height:0}
